Search apartment components
Picture file decoder changed to java.util.Base64 decoder